--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "deploy": "^1.0.3",
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
-    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jupyter-notebook": "^0.4.0",
@@ -28,8 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "next dev"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
