--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "deploy": "^1.0.3",
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
+    "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-jupyter-notebook": "^0.4.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
