--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.2.25",
     "@types/jquery": "^3.5.16",
     "@types/node": "^20.5.0",
     "@types/styled-components": "^5.1.26",
