--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
     "markdown-to-jsx": "^7.3.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-jupyter-notebook": "^0.4.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,6 +58,7 @@
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^5.0.0",
     "raw-loader": "^4.0.2",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "typescript": "^5.8.2"
   }
 }
